JumpScript/tests/baselines/reference/jsFileCompilationAbstractModifier.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
  Adding a jmpconfig.json file will help organize projects that contain both JumpScript and JavaScript files. Learn more at https://aka.ms/jmpconfig.
tests/cases/compiler/a.js(1,1): error TS8009: 'abstract' can only be used in a .jump file.
tests/cases/compiler/a.js(2,5): error TS8009: 'abstract' can only be used in a .jump file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
!!! error TS5055:   Adding a jmpconfig.json file will help organize projects that contain both JumpScript and JavaScript files. Learn more at https://aka.ms/jmpconfig.
==== tests/cases/compiler/a.js (2 errors) ====
    abstract class c {
    ~~~~~~~~
!!! error TS8009: 'abstract' can only be used in a .jump file.
        abstract x;
        ~~~~~~~~
!!! error TS8009: 'abstract' can only be used in a .jump file.
    }